--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 IS_TEMPLATE=true
 # # For blog views and guestbook
-DATABASE_URL="mysql://..."
+DATABASE_HOST=aws.connect.psdb.cloud
+DATABASE_USERNAME=znpw868em5ryjvx1uwgm
+DATABASE_PASSWORD=pscale_pw_mFZPRkSbFRB4BIBrklb1U1QcHzVwECcNLh0VKOQJaug
 
 # For /guestbook
 NEXTAUTH_URL=http://localhost:3000
