Update: removed light theme. Always dark theme

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 IS_TEMPLATE=true
 # # For blog views and guestbook
-DATABASE_HOST=aws.connect.psdb.cloud
-DATABASE_USERNAME=znpw868em5ryjvx1uwgm
-DATABASE_PASSWORD=pscale_pw_mFZPRkSbFRB4BIBrklb1U1QcHzVwECcNLh0VKOQJaug
+# DATABASE_HOST=aws.connect.psdb.cloud
+# DATABASE_USERNAME=znpw868em5ryjvx1uwgm
+# DATABASE_PASSWORD=pscale_pw_mFZPRkSbFRB4BIBrklb1U1QcHzVwECcNLh0VKOQJaug
+DATABASE_URL='mysql://bbn1jpbz5e5mx6v4u7uj:pscale_pw_lhEwJtGGzC2NiIVIappocE0zwGybhinsm6IMIq7R2mJ@eu-west.connect.psdb.cloud/msbabacan?ssl={"rejectUnauthorized":true}'
 
 # For /guestbook
 NEXTAUTH_URL=http://localhost:3000
