--- a/.env
+++ b/.env
@@ -1,18 +1,17 @@
 IS_TEMPLATE=true
-# # For blog views and guestbook
-# DATABASE_HOST=aws.connect.psdb.cloud
-# DATABASE_USERNAME=znpw868em5ryjvx1uwgm
-# DATABASE_PASSWORD=pscale_pw_mFZPRkSbFRB4BIBrklb1U1QcHzVwECcNLh0VKOQJaug
 DATABASE_URL='mysql://bbn1jpbz5e5mx6v4u7uj:pscale_pw_lhEwJtGGzC2NiIVIappocE0zwGybhinsm6IMIq7R2mJ@eu-west.connect.psdb.cloud/msbabacan?ssl={"rejectUnauthorized":true}'
-
 # For /guestbook
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=
-OAUTH_CLIENT_KEY=
-OAUTH_CLIENT_SECRET=
+NEXTAUTH_SECRET="ASJDLKJSDLDJ"
+OAUTH_CLIENT_KEY="d2c4592f9328458c0f91"
+OAUTH_CLIENT_SECRET="dfd182a1a4bd451ea42875f305cba6f71d97b3f7"
 
 # For tweets in /blog
 # TWITTER_API_TOKEN=
 
 # For redirects
 # EDGE_CONFIG=
+# # For blog views and guestbook
+# DATABASE_HOST=aws.connect.psdb.cloud
+# DATABASE_USERNAME=znpw868em5ryjvx1uwgm
+# DATABASE_PASSWORD=pscale_pw_mFZPRkSbFRB4BIBrklb1U1QcHzVwECcNLh0VKOQJaug
